<resources>
    <string name="app_name">WorkFitApplication</string>
    <string name="fitness_app">Fitness app</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="total_steps_counts">Steps Count</string>
    <string name="total_steps_detect">Steps Detect</string>
    <string name="start_step_count">0</string>
    <string name="home_page_name">Work Fit</string>
    <string name="better">Better Yourself Each Day</string>
    <string name="home_page_msg">We hope you make an optimum use\n of the app for your gains</string>

    <string name="name">Name</string>
    <string name="namedefault">None</string>
    <string name="email">E-mail</string>
    <string name="emaildefault">ahmedazzamouri@gmail.com</string>
    <string name="username">Userame</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string-array name="listArray">

        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <string-array name="listValues">
        <item>Wi-Fi</item>
        <item>Any</item>
    </string-array>

    <string name="lost_connection">Connection lost.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="connection_enabled">Active connection</string>
    <string name="noWifiErrorMsg">You have the Wi-fi only option activated but there is no Wi-fi connection available</string>
    <string name="noConnection">There\'s no type of connection available in ur device. Activate to use it</string>


    ######################LOGIN#############################
    <string name="tv_login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_pwd">Password</string>
    <string name="create_account">Dont have an account? SIGN UP FREE</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="password_forgot">Forgot your password?</string>
    <string name="submit_reset_pwd">Submit</string>
    <string name="resetPwd">Please enter your email to receive your password reset</string>

    ######################REGISTER###########################

    <string name="register">Register</string>
    <string name="register_username">Your username</string>
    <string name="register_phone">Your phone number</string>
    <string name="register_name">Your name</string>
    <string name="register_email">Your email</string>
    <string name="register_password">Your password</string>
    <string name="register_weight">Your weight</string>
    <string name="register_height">Your height</string>
    <string name="register_confirm_password">Confirm your password</string>
    <string name="button_right_desc">Click for Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="register_invalid_email">This email address is invalid</string>
    <string name="register_password_error">Please enter a password</string>
    <string name="register_email_error">Please enter your email address</string>
    <string name="register_error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="terms_service">By clicking on Create Account, you agree to our Terms of Services and Privacy Policy.</string>


    #################### PROFILE ################################

    <string name="profile_username">Username</string>
    <string name="profile_email">email</string>
    <string name="profile_name">name</string>
    <string name="profile_joined_date">joined date</string>
    <string name="profile_weight">weight</string>
    <string name="profile_height">height</string>
    <string name="profile_phonenumber">phonenumber</string>

    #####################MENU######################
    <string name="workout_timer">Workout Timer</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="training_splits">Training Splits</string>
    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="step_count">Step Count</string>
    <string name="configuration">Configuration</string>

    ######################TIMER##################################
    <string name="text_timer">00:00</string>
    <string name="start_timer">START</string>
    <string name="reset_timer">RESET</string>
    <string name="pause_timer">PAUSE</string>
    <string name="set_timer">SET</string>
    <string name="timer_quote">Do not leave for tomorrow what you can do today</string>
    <string name="timer_description">Workout countdown timer</string>
    <string name="clock_hint">Minutes</string>

    #######################CALORIE CALCULATOR########################
    <string name="calc_title">Calorie Calculator</string>
    <string name="calc_calorie">Calculate</string>
    <string name="calorie_intake">Calorie Intake in Kcal</string>
    <string name="calculator">---------------</string>
    <string name="cal_macros">Macros</string>
    <string name="maintenance">Maintenance:</string>
    <string name="bulk">Bulk:</string>
    <string name="cut">Cut:</string>
    <string name="macros_protein">Protein:</string>
    <string name="macros_carbs">Carbs:</string>
    <string name="macros_fats">Fats:</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_height_in_cm">Enter Height in cm</string>
    <string name="enter_weight_in_kg">Enter Weight in Kg</string>
    <string name="edit_gender">Enter your gender:</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>


    ######################DAY SPLITS###############################
    <string name="workout_splis">Workout Days Split</string>
    <string name="workout_splits_3days">3 days</string>
    <string name="workout_splits_4days">4 days</string>
    <string name="workout_splits_5days">5 days</string>
    <string name="go_button">Go!</string>

    #######################3 DAY SPLIT##############################
    <string name="three_day_split">3 Day Split</string>
    <string name="three_day_split_day1">Day 1:</string>
    <string name="three_day_split_day2">Day 2:</string>
    <string name="three_day_split_day3">Day 3:</string>
    <string name="three_day_split_day1workout">Chest/Back</string>
    <string name="three_day_split_day2workout">Arms/Shoulders</string>
    <string name="three_day_split_day3workout">Legs/Abs</string>
    <string name="three_day_split_day1exercises">1. Dumbbell Press (3x16)\n 2. Dumbbell Flys (3x12)\n 3. Decline Press (3x18)\n 4. Military Press (3x12)\n 5. Dumbbell Rows (3x12)\n 6. Lat Rows (3x18)\n 7. Cable Rows (3x12)\n 8. Barbell DeadLift (3x8)</string>
    <string name="three_day_split_day2exercises">1. Bicep Curls (3x16)\n 2. Preacher Curls (3x12)\n 3. Incline Curls (3x18)\n 4. Hammer Curls (3x12)\n 5. Tricep Extensions (3x12)\n 6. Cable Pull Downs (3x18)\n 7. SkullCrushers (3x12)\n 8. Diamond Pushups (3x8)</string>
    <string name="three_day_split_day3exercises">1. Weighted Squats (3x16)\n 2. Reverse Lunges (3x12)\n 3. Side Lunges (3x18)\n 4. Sumo Squats (3x12)\n 5. Deadlifts (3x12)\n 6. Planks (3x18)\n 7. Hanging Knee Raise (3x12)\n 8. Dumbbell Side Bends (3x8)</string>

    <string name="four_day_split">4 Day Split</string>
    <string name="four_day_split_day1">Day 1:</string>
    <string name="four_day_split_day2">Day 2:</string>
    <string name="four_day_split_day3">Day 3:</string>
    <string name="four_day_split_day4">Day 4:</string>
    <string name="four_day_split_day1workout">Chest/Triceps</string>
    <string name="four_day_split_day2workout">Back/Biceps</string>
    <string name="four_day_split_day3workout">Legs</string>
    <string name="four_day_split_day4workout">Abs/Shoulders</string>
    <string name="four_day_split_day1exercises">1. Dumbbell Press (3x16)\n 2. Dumbbell Flys (3x12)\n 3. Decline Press (3x18)\n 4. Tricep Extensions (3x12)\n 5. SkullCrushers (3x12)\n 6. Overhead Extensions (3x18)</string>
    <string name="four_day_split_day2exercises">1. Bicep Curls (3x16)\n 2. Preacher Curls (3x12)\n 3. Incline Curls (3x18)\n 4. Hammer Curls (3x12)\n 5. Lat Rows (3x12)\n 6. Lat Extensions (3x18)</string>
    <string name="four_day_split_day3exercises">1. Weighted Squats (3x16)\n 2. Reverse Lunges (3x12)\n 3. Side Lunges (3x18)\n 4. Sumo Squats (3x12)</string>
    <string name="four_day_split_day4exercises">1. Knee Raises (3x16)\n 2. Side Crunches (3x12)\n 3. Arnold Press (3x18)\n 4. Military Press (3x12)</string>

    ########################5 DAY SPLIT#################################
    <string name="five_day_split">5 Day Split</string>
    <string name="five_day_split_day1">Day 1:</string>
    <string name="five_day_split_day2">Day 2:</string>
    <string name="five_day_split_day3">Day 3:</string>
    <string name="five_day_split_day4">Day 4:</string>
    <string name="five_day_split_day5">Day 5:</string>
    <string name="five_day_split_day1workout">Chest/Triceps</string>
    <string name="five_day_split_day2workout">Arms/Shoulders</string>
    <string name="five_day_split_day3workout">Shoulder/Triceps</string>
    <string name="five_day_split_day4workout">Legs/Biceps</string>
    <string name="five_day_split_day5workout">Core/Cardio</string>
    <string name="five_day_split_day1exercises">1. Incline Press (3x12)\n 2. Close-Hand Press (3x12)\n 3. Decline Press (3x12)\n 4. Dumbbell Flys (3x12)\n 5. Pushups (Muscle failure)\n 6. Tricep Extensions (3x12)\n 7. SkullCrushers (3x12)\n 8. Diamond Pushups (3x10)\n 9. Cable Pull Downs (4x8)\n</string>
    <string name="five_day_split_day2exercises">1. Lat Rows\n 2. Cable Rows\n 3. Lat Pull Downs\n 4. PullUps\n 5. ChinUps\n 6. Bicep Curls\n 7. Concentration curls\n 8. Preacher Curls\n 9. Incline Curls\n 10. Hammer Curls</string>
    <string name="five_day_split_day3exercises">1. Arnold Press (4x12)\n 2. Military Press (4x12)\n 3. Cable Pull Downs (4x12)\n 4. SkullCrushers (4x12)\n 5. Close Grip Pushups (4x12)\n 6. Close Grip Bench Press (4x12)</string>
    <string name="five_day_split_day4exercises">1. Leg Extensions (3x12)\n 2. Leg Curls (3x12)\n 3. Sumo Squats (3x12)\n 4. Squats (3x12)\n 5. Side Steps (3x12)\n 6. Reverse Lunges (3x12)\n 7. Preacher Curls (3x12)\n 8. Bicep Curls (3x12)\n 9. Concentration Curls (3x12)\n 10. Hammer Curls (3x12)</string>
    <string name="five_day_split_day5exercises">1. Planks (4x30s)\n 2. Burpees (4x60s)\n 3. Reverse Crunches (4x30s)\n 5. Running (20min)\n 6. Jogging(10min)\n 7. Interval Jumping Jacks (4x30s)\n 8.Bodyweight Squats (4x12)</string>
    <string name="hello_blank_fragment">Hello</string>


</resources>