<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:defaultValue="@string/namedefault"
        android:key="@string/name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/name"
        />

    <EditTextPreference
        android:defaultValue="false"
        android:key="@string/email"
        android:maxLength="30"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/email" />


    <ListPreference
        android:title="Connexió"
        android:summary="Tipus de connexió que vol usar"
        android:key="listPref"
        android:defaultValue="Wi-Fi"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues"
        />




</PreferenceScreen>