<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveDaySplitActivity"
    android:background="@color/colorPrimary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/textview_split5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_split5_day1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/black_ops"
            android:text="@string/five_day_split_day1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.207"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day1workout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toEndOf="@+id/textview_split5_day1"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="226dp"
            android:layout_height="164dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day1exercises"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />


        <TextView
            android:id="@+id/textview_split5_day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:fontFamily="@font/black_ops"
            android:text="@string/five_day_split_day2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="248dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day2workout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toEndOf="@+id/textview_split5_day2"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="174dp"
            android:layout_marginTop="284dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day2exercises"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:id="@+id/textview_split5_day3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="464dp"
            android:fontFamily="@font/black_ops"
            android:text="@string/five_day_split_day3"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="464dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day3workout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toEndOf="@+id/textview_split5_day2"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="255dp"
            android:layout_height="132dp"
            android:layout_marginTop="524dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day3exercises"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:id="@+id/textview_split5_day4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:fontFamily="@font/black_ops"
            android:text="@string/five_day_split_day4"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day4workout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.318"
            app:layout_constraintStart_toEndOf="@+id/textview_split5_day2"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />


        <TextView
            android:layout_width="269dp"
            android:layout_height="173dp"
            android:layout_marginTop="692dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day4exercises"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:id="@+id/textview_split5_day5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="864dp"
            android:fontFamily="@font/black_ops"
            android:text="@string/five_day_split_day5"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="864dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day5workout"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.322"
            app:layout_constraintStart_toEndOf="@+id/textview_split5_day2"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />

        <TextView
            android:layout_width="286dp"
            android:layout_height="125dp"
            android:layout_marginTop="900dp"
            android:fontFamily="@font/baloo"
            android:text="@string/five_day_split_day5exercises"
            android:textAlignment="center"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_split5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>