<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfile"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/name"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="313dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/namedefault"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="313dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="@string/email"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/emaildefault"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="377dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="Split Day Workout"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="442dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four_day_split"
        android:fontFamily="@font/roboto_regular"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="445dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>